--- a/msstate.css
+++ b/msstate.css
@@ -8,7 +8,7 @@
     --font-family: 'Times New Roman', Times;
     --font-weight: 400;
     --line-height: 1.75rem;
-    --line-height-s: 1.25rem;
+    --line-height-s: 1.75rem;
     --letter-spacing: .075px;
 }
 
@@ -74,7 +74,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	margin: 10px;
-	padding: 10px;
+	padding: 0;
     overflow: hidden;
 }
 
